Update register template

--- a/login_style2.css
+++ b/login_style2.css
@@ -51,10 +51,24 @@ html,body{
   border-radius: 25px;
   transition: all 0.3s ease;
 }
+
+.wrapper form .field select{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  font-size: 17px;
+  padding-left: 20px;
+  border: 1px solid lightgrey;
+  border-radius: 25px;
+  transition: all 0.3s ease;
+}
+
+
 .wrapper form .field input:focus,
 form .field input:valid{
   border-color: #4158d0;
 }
+
 .wrapper form .field label{
   position: absolute;
   top: 50%;
@@ -86,6 +100,12 @@ form .content .checkbox{
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+form .content select{
+  width: 15px;
+  height: 15px;
+  background: red;
 }
 form .content input{
   width: 15px;
